--- a/app/src/main/res/layout/activity_hsmain.xml
+++ b/app/src/main/res/layout/activity_hsmain.xml
@@ -6,7 +6,8 @@
     android:background="#FFFFFF"
     tools:context="com.aiqing.niuniuheardsensor.activities.HSMainActivity">
 
-    <TextView android:text="@string/hello_world"
+    <TextView
+        android:id="@+id/phone_status"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
 
