--- a/app/src/main/res/layout/activity_hsmain.xml
+++ b/app/src/main/res/layout/activity_hsmain.xml
@@ -4,11 +4,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp"
+    android:paddingTop="10dp"
     tools:context="com.aiqing.niuniuheardsensor.activities.HSMainActivity">
 
     <TextView
         android:id="@+id/phone_status"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:textSize="20sp"/>
+
+
+    <TextView
+        android:id="@+id/change_mobile"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="5dp"
+        android:textSize="20sp"
+        android:textColor="@color/colorOrange1"
+        android:text="修改"/>
 
 </LinearLayout>
