--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -33,4 +33,10 @@
 
     <color name="colorOrange1">#ff8500</color>
 
+    <color name="red">#ff0000</color>
+
+    <color name="green">#00ff00</color>
+
+    <color name="blue">#0000ff</color>
+
 </resources>
