--- a/app/src/main/res/layout/layout_records_item.xml
+++ b/app/src/main/res/layout/layout_records_item.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="horizontal"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
+    android:orientation="horizontal"
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
 
@@ -12,60 +12,60 @@
         android:id="@+id/mobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="13000000000"/>
+        android:text="13000000000" />
 
     <View
         android:layout_width="1px"
+        android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorGray3"/>
+        android:background="@color/colorGray3" />
 
 
     <TextView
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="未接"/>
+        android:text="未接" />
 
     <View
         android:layout_width="1px"
+        android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorGray3"/>
+        android:background="@color/colorGray3" />
 
     <TextView
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2016 3-15 18:00"/>
+        android:text="2016 3-15 18:00" />
 
     <View
         android:layout_width="1px"
+        android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorGray3"/>
+        android:background="@color/colorGray3" />
 
     <TextView
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0秒"/>
+        android:text="0秒" />
 
     <View
         android:layout_width="1px"
+        android:layout_height="match_parent"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
-        android:layout_height="match_parent"
-        android:background="@color/colorGray3"/>
+        android:background="@color/colorGray3" />
 
     <ImageView
         android:id="@+id/play_record"
         android:layout_width="20dp"
         android:layout_height="20dp"
-        android:background="@drawable/icon_play"
-        android:visibility="gone"/>
+        android:src="@drawable/icon_play"
+        android:visibility="gone" />
 
 </LinearLayout>
