--- a/app/src/main/res/layout/activity_hsmain.xml
+++ b/app/src/main/res/layout/activity_hsmain.xml
@@ -18,10 +18,11 @@
             android:text="牛牛客服"
             android:textColor="@color/colorOrange1"
             android:textSize="28sp" />
+
     </FrameLayout>
 
 
-    <LinearLayout
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/colorGray5"
@@ -31,20 +32,65 @@
         android:paddingRight="10dp"
         android:paddingTop="10dp">
 
-        <TextView
-            android:id="@+id/phone_status"
+
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="20sp" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/phone_status"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/change_mobile"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="修改"
+                android:textColor="@color/colorOrange1"
+                android:textSize="20sp" />
+
+        </LinearLayout>
 
         <TextView
-            android:id="@+id/change_mobile"
+            android:id="@+id/edit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:text="修改"
-            android:textColor="@color/colorOrange1"
-            android:textSize="20sp" />
+            android:layout_gravity="right|center_vertical"
+            android:text="编辑记录"
+            android:textColor="@color/colorOrange1" />
+
+
+    </FrameLayout>
+
+    <LinearLayout
+        android:id="@+id/edit_layout"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="right|center_vertical"
+        android:background="@color/colorGray5"
+        android:paddingBottom="5dp"
+        android:paddingLeft="10dp"
+        android:visibility="gone">
+
+        <TextView
+            android:id="@+id/select_all"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="全选"
+            android:textColor="@color/colorOrange1" />
+
+        <TextView
+            android:id="@+id/delete"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="10dp"
+            android:text="删除"
+            android:textColor="@color/colorOrange1" />
     </LinearLayout>
 
     <ListView
