--- a/app/src/main/res/layout/layout_records_item.xml
+++ b/app/src/main/res/layout/layout_records_item.xml
@@ -7,12 +7,26 @@
     android:paddingBottom="5dp"
     android:paddingTop="5dp">
 
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_weight="1">
+
+
+    <ImageView
+        android:id="@+id/select"
+        android:layout_width="20dp"
+        android:layout_height="20dp"
+        android:layout_marginRight="2dp"
+        android:background="@drawable/btn_unselect"
+        android:visibility="gone"/>
 
     <TextView
         android:id="@+id/mobile"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="13000000000" />
+        android:text="13000000000"
+        android:singleLine="true"/>
 
     <View
         android:layout_width="1px"
@@ -26,7 +40,8 @@
         android:id="@+id/type"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="未接" />
+        android:text="未接"
+        android:singleLine="true"/>
 
     <View
         android:layout_width="1px"
@@ -39,7 +54,8 @@
         android:id="@+id/time"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="2016 3-15 18:00" />
+        android:text="2016 3-15 18:00"
+        android:singleLine="true"/>
 
     <View
         android:layout_width="1px"
@@ -52,7 +68,8 @@
         android:id="@+id/duration"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="0秒" />
+        android:text="0秒"
+        android:singleLine="true"/>
 
     <View
         android:layout_width="1px"
@@ -61,11 +78,24 @@
         android:layout_marginRight="5dp"
         android:background="@color/colorGray3" />
 
+
+
+    </LinearLayout>
+
     <ImageView
         android:id="@+id/play_record"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/icon_play"
-        android:visibility="gone" />
+        android:visibility="visible" />
+
+    <TextView
+        android:id="@+id/reupload"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="2dp"
+        android:text="重传"
+        android:textColor="@color/red"
+        android:visibility="gone"/>
 
 </LinearLayout>
